fix: align column format  for compatibility

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   height: 90vh;
   width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 5rem;
